@@ -1,3 +1,4 @@
+* Add selected text color property
 * Remove lighter background on event
 
 Version 0.7.1 - 2020-04-18
